--- a/main.css
+++ b/main.css
@@ -1,151 +1,58 @@
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-}
-body {
-  height: 100vh;
-  background: #066acd;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  font-family: 'Poppins',sans-serif;
-}
 .container {
-  margin-top: 100px;
-  min-height: 100px;
-  min-width: 450px;
-  width: 70%;
+  margin: 50px auto;
+  width: 500px;
+  
+}
+.form,.tasks{
+  background-color: #ddd;
+  padding: 15px;
+  border-radius: 9px;
+  
 }
 .form{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    margin-bottom: 20px;
+  display: flex;
+  flex-flow:row wrap ;
+  margin-bottom: 20px;
 }
 .input{
-    color: #111;
-    font-weight: 500;
-    border-radius: 5px;
-    font-family: 'Poppins',sans-serif;
-    font-size: 15px;
-    border: 2px solid #d1d3d4;
-    flex: 1;
-    height: 45px;
-    padding: 12px;
-    outline: none;
-}
-input::selection{
-    background-color: #066acd;
-    color: white;
-}
-input:focus{
-    outline: none;
-    border-color: #0d75ec;
+  margin-right: 15px;
+  width: calc((100%) - 115px );
+  font-size: 16px;
 }
 .add{
-    width: fit-content;
-    background-color: #066acd;
-    color: white;
-    padding: 15px;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    font-weight: 500;
-    border: none;
-    cursor: pointer;
-    margin-left: 20px;
+  background-color: red;
+  color: white;
+  max-width: 100px;
+  font-size: 15px;
+  text-align: center;
+  cursor: pointer;
 }
-.tasks{
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+.input,.add{
+  border: none;
+  border-radius: 9px;
+  outline: none;
+  padding: 10px 15px;
 }
-.tasks .task {
-    padding: 10px;
-    border: 2px solid #d1d3d4;
-    margin-bottom:10px;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.task {
+  background-color: white;
+  padding: 10px 15px;
+  border-radius: 9px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
-.done{
-        background-color: #eee;
-        opacity: 0.5;
-        position: relative;
+.task.done{
+  opacity: 50%;
 }
-.task:hover{
-    background-color: #eee;
-    transition: 0.3s;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -ms-transition: 0.3s;
-    -o-transition: 0.3s;
+.task .text{
+  font-size: large;
 }
-.done:hover{
-    opacity: 0.7;
-    transition: 0.3s;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -ms-transition: 0.3s;
-    -o-transition: 0.3s;
-}
-.del{
-    color: white;
-    background-color:#f44336;
-    padding:5px;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border: none;
-}
-.image{
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
- img {
-    width:80%;
-}
-/* Small */
-@media(max-width:768px) {
-.container{
-    margin-top: 60px;
-    min-height: 50px;
-    min-width: 50px;
-    width: 90%;
-}
-.add{
-    padding: 8px;
-    font-weight: 500;
-    margin-left: 10px;
-}
-.input{
-    font-size: 12px;
-    height: 35px;
-    padding: 10px;
-}
+.delete{
+  background-color: red;
+  border-radius: 9px;
+  border: none;
+  color: white;
+  padding: 5px 8px;
+  font-weight: bold;
+  cursor: pointer;
 }
